Modified this codes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,28 +10,25 @@
 
 
     <EditText
-        android:id="@+id/editHeightInc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="12"
-        android:hint="@string/height_inc"
-        android:inputType="number" />
-
-    <EditText
         android:id="@+id/editHeightFt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="293dp"
+        android:layout_height="65dp"
         android:ems="12"
         android:hint="@string/height_ft"
-        android:inputType="number" />
+        android:inputType="numberDecimal"
+        android:textColorHint="#8D6E63"
+        android:importantForAutofill="no" />
 
     <EditText
         android:id="@+id/editWeight"
-        android:layout_width="250dp"
+        android:layout_width="291dp"
         android:layout_height="wrap_content"
-        android:ems="10"
+        android:ems="12"
         android:hint="@string/weight"
-        android:inputType="number" />
+        android:inputType="numberDecimal"
+        android:minHeight="48dp"
+        android:textColorHint="#8D6E63"
+        android:importantForAutofill="no" />
 
     <Button
         android:id="@+id/buttoncal"
